@@ -28,6 +28,15 @@ my @warnings = warnings {
       validate_formats => 1,
     },
     output_file => $version.'-additional-tests.txt',
+    test => {
+      todo_tests => [
+        { file => [
+            # these all depend on optional prereqs
+            !eval { +require Time::Moment; 1 } ? qw(format-date-time.json format-date.json format-time.json) : (),
+            !eval { +require DateTime::Format::RFC3339; 1 } ? 'format-date-time.json' : (),
+          ] },
+      ],
+    },
   );
 };
 
