@@ -11,7 +11,6 @@ use Test::More 0.96;
 use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Test::Deep;
 use Test::Fatal;
-use Test::Needs;
 use JSON::Schema::Modern;
 
 use lib 't/lib';
@@ -235,10 +234,8 @@ subtest 'different formats after document creation' => sub {
 };
 
 subtest 'toggle validate_formats after adding schema' => sub {
-  test_needs 'Time::Moment';
-
   my $js = JSON::Schema::Modern->new;
-  my $document = $js->add_schema(my $uri = 'http://localhost:1234/date-time', { format => 'date-time' });
+  my $document = $js->add_schema(my $uri = 'http://localhost:1234/ipv4', { format => 'ipv4' });
 
   cmp_deeply(
     $js->evaluate('hello', $uri)->TO_JSON,
@@ -254,8 +251,8 @@ subtest 'toggle validate_formats after adding schema' => sub {
         {
           instanceLocation => '',
           keywordLocation => '/format',
-          absoluteKeywordLocation => 'http://localhost:1234/date-time#/format',
-          error => 'not a date-time',
+          absoluteKeywordLocation => 'http://localhost:1234/ipv4#/format',
+          error => 'not an ipv4',
         },
       ],
     },
@@ -263,7 +260,7 @@ subtest 'toggle validate_formats after adding schema' => sub {
   );
 
   cmp_deeply(
-    $js->evaluate('2001-01-01T00:00:00Z', $uri, { validate_formats => 1 })->TO_JSON,
+    $js->evaluate('127.0.0.1', $uri, { validate_formats => 1 })->TO_JSON,
     { valid => true },
     'valid assertion behaviour does not die',
   );
@@ -277,8 +274,8 @@ subtest 'toggle validate_formats after adding schema' => sub {
         {
           instanceLocation => '',
           keywordLocation => '/format',
-          absoluteKeywordLocation => 'http://localhost:1234/date-time#/format',
-          error => 'not a date-time',
+          absoluteKeywordLocation => 'http://localhost:1234/ipv4#/format',
+          error => 'not an ipv4',
         },
       ],
     },
@@ -286,7 +283,7 @@ subtest 'toggle validate_formats after adding schema' => sub {
   );
 
   cmp_deeply(
-    $js2->evaluate('2001-01-01T00:00:00Z', $uri)->TO_JSON,
+    $js2->evaluate('127.0.0.1', $uri)->TO_JSON,
     { valid => true },
     'valid assertion behaviour does not die',
   );
